# jackc

./: ArrayTest.jack  Cargo.toml  README.md  SquareGame.jack
.github/workflows/: ci.yml
src/: hack.rs  labels.rs  lib.rs  main.rs  tokenizer.rs  vm.rs
src/asm/: assembler.rs  instruction.rs  mod.rs
src/hack/: asm.rs  emulator.rs  mod.rs
src/jack/: compiler.rs  mod.rs  parser.rs  symbol_table.rs  tokenizer.rs
src/vm/: command.rs  mod.rs  parser.rs  translator.rs
tests/: compiler_test.rs  helpers.rs  parser_test.rs  tokenizer_test.rs  translator_test.rs
tests/testdata/: ArrayTest.jack  Bat.jack  ConvertToBin.jack  SquareGame.jack  SquareMain.jack
